# jinjadir

./: .gitignore  README.md  pyproject.toml
.github/: workflows
.github/workflows/: validate.yaml
jinjadir/: __init__.py  cli.py
pp/: cli.py
requirements/: base.txt  dev.txt  test.txt
templates/cli/: README.md  pyproject.toml
templates/cli/requirements/: base.txt  dev.txt
templates/cli/tests/: __init__.py  test_{{ project }}.py
templates/cli/{{ project }}/: __init__.py  cli.py
templates/rust-cli/: Cargo.toml  README.md
templates/rust-cli/src/: main.rs
templates/rust-cli/tests/: integration_test.rs
tests/: __init__.py  test_jinjadir.py  test_pp.py
