[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pp"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = { find = { include = ["pp", "pp.*"] } }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/base.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
pp = "pp.cli:app"

[tool.flake8]
inline-quotes = "double"
max-line-length = 88
ignore = ["WPS306"]
per-file-ignores = [
    "tests/test_*.py:D100,D101,D102,D103,S101",
    "pp/cli.py:WPS320,WPS234",
]
docstring_style = "numpy"

[tool.mypy]
plugins = "returns.contrib.mypy.returns_plugin"
strict = true

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
