[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jinjadir"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = { find = { include = ["jinjadir", "jinjadir.*"] } }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/base.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
jinjadir = "jinjadir.cli:app"

[tool.flake8]
exclude = ["templates", "build"]
inline-quotes = "double"
max-line-length = 88
ignore = [
    # class without a base class - okay for ...(Object):
    "WPS306",
]
per-file-ignores = [
    # D100,D101,D102,D103 documentation - no need for tests
    # S101 assert - used by pytest
    # WPS210 many local vars - okay(?) for tests
    "tests/test_*.py:D100,D101,D102,D103,S101,WPS210",
    # WPS320 multi-line annotation - okay for Typer params
    # WPS234 complex annotation - okay for Typer params
    # D103 function docs - Typer annotations serve as such
    "jinjadir/cli.py:WPS320,WPS234,D103",
]
docstring_style = "numpy"

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
exclude = ["templates", "build"]
strict = true

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
exclude = "templates"

[tool.isort]
profile = "black"
skip = "templates"

[tool.black]
exclude = "templates"
